3-geracao/sintatico.output
Nonterminals useless in grammar

    declaracao_variaveis
    lista_variaveis
    $@4


Rules useless in grammar

   54 variaveis: declaracao_variaveis

   55 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
   56                     | tipo lista_variaveis

   57 $@4: ε

   58 lista_variaveis: lista_variaveis T_IDENTIF $@4 T_IDENTIF


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 tipo: T_LOGICO
    6     | T_INTEIRO
    7     | T_REGISTRO T_IDENTIF

    8 definicoes: define definicoes
    9           | ε

   10 $@3: ε

   11 define: T_DEF $@3 definicao_campos T_FIMDEF T_IDENTIF

   12 definicao_campos: tipo lista_campos definicao_campos
   13                 | tipo lista_campos

   14 lista_campos: lista_campos T_IDENTIF
   15             | T_IDENTIF

   16 variaveis: ε

   17 lista_comandos: ε
   18               | comando lista_comandos

   19 comando: entrada_saida
   20        | atribuicao
   21        | selecao
   22        | repeticao

   23 entrada_saida: entrada
   24              | saida

   25 entrada: T_LEIA T_IDENTIF

   26 saida: T_ESCREVA expressao

   27 $@5: ε

   28 atribuicao: T_IDENTIF $@5 T_ATRIB expressao

   29 $@6: ε

   30 $@7: ε

   31 selecao: T_SE expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

   32 $@8: ε

   33 $@9: ε

   34 repeticao: T_ENQTO $@8 expressao T_FACA $@9 lista_comandos T_FIMENQTO

   35 expressao: expressao T_VEZES expressao
   36          | expressao T_DIV expressao
   37          | expressao T_MAIS expressao
   38          | expressao T_MENOS expressao
   39          | expressao T_MAIOR expressao
   40          | expressao T_MENOR expressao
   41          | expressao T_IGUAL expressao
   42          | expressao T_E expressao
   43          | expressao T_OU expressao
   44          | termo

   45 $@10: ε

   46 expressao_acesso: T_IDPONTO $@10 expressao_acesso
   47                 | T_IDENTIF

   48 termo: expressao_acesso
   49      | T_NUMERO
   50      | T_V
   51      | T_F
   52      | T_NAO termo
   53      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 7 11 14 15 25 28 47
    T_LEIA (262) 25
    T_ESCREVA (263) 26
    T_ENQTO (264) 34
    T_FACA (265) 34
    T_FIMENQTO (266) 34
    T_SE (267) 31
    T_ENTAO (268) 31
    T_SENAO (269) 31
    T_FIMSE (270) 31
    T_ATRIB (271) 28
    T_VEZES (272) 35
    T_DIV (273) 36
    T_MAIS (274) 37
    T_MENOS (275) 38
    T_MAIOR (276) 39
    T_MENOR (277) 40
    T_IGUAL (278) 41
    T_E (279) 42
    T_OU (280) 43
    T_V (281) 50
    T_F (282) 51
    T_NUMERO (283) 49
    T_NAO (284) 52
    T_ABRE (285) 53
    T_FECHA (286) 53
    T_LOGICO (287) 5
    T_INTEIRO (288) 6
    T_DEF (289) 11
    T_FIMDEF (290) 11
    T_REGISTRO (291) 7
    T_IDPONTO (292) 46


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa (39)
        on left: 3
        on right: 0
    $@1 (40)
        on left: 1
        on right: 3
    $@2 (41)
        on left: 2
        on right: 3
    cabecalho (42)
        on left: 4
        on right: 3
    tipo (43)
        on left: 5 6 7
        on right: 12 13
    definicoes (44)
        on left: 8 9
        on right: 3 8
    define (45)
        on left: 11
        on right: 8
    $@3 (46)
        on left: 10
        on right: 11
    definicao_campos (47)
        on left: 12 13
        on right: 11 12
    lista_campos (48)
        on left: 14 15
        on right: 12 13 14
    variaveis (49)
        on left: 16
        on right: 3
    lista_comandos (50)
        on left: 17 18
        on right: 3 18 31 34
    comando (51)
        on left: 19 20 21 22
        on right: 18
    entrada_saida (52)
        on left: 23 24
        on right: 19
    entrada (53)
        on left: 25
        on right: 23
    saida (54)
        on left: 26
        on right: 24
    atribuicao (55)
        on left: 28
        on right: 20
    $@5 (56)
        on left: 27
        on right: 28
    selecao (57)
        on left: 31
        on right: 21
    $@6 (58)
        on left: 29
        on right: 31
    $@7 (59)
        on left: 30
        on right: 31
    repeticao (60)
        on left: 34
        on right: 22
    $@8 (61)
        on left: 32
        on right: 34
    $@9 (62)
        on left: 33
        on right: 34
    expressao (63)
        on left: 35 36 37 38 39 40 41 42 43 44
        on right: 26 28 31 34 35 36 37 38 39 40 41 42 43 53
    expressao_acesso (64)
        on left: 46 47
        on right: 46 48
    $@10 (65)
        on left: 45
        on right: 46
    termo (66)
        on left: 48 49 50 51 52 53
        on right: 44 52


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho • definicoes variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_DEF  shift, and go to state 6

    $default  reduce using rule 9 (definicoes)

    definicoes  go to state 7
    define      go to state 8


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

   11 define: T_DEF • $@3 definicao_campos T_FIMDEF T_IDENTIF

    $default  reduce using rule 10 ($@3)

    $@3  go to state 9


State 7

    3 programa: cabecalho definicoes • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    $default  reduce using rule 16 (variaveis)

    variaveis  go to state 10


State 8

    8 definicoes: define • definicoes

    T_DEF  shift, and go to state 6

    $default  reduce using rule 9 (definicoes)

    definicoes  go to state 11
    define      go to state 8


State 9

   11 define: T_DEF $@3 • definicao_campos T_FIMDEF T_IDENTIF

    T_LOGICO    shift, and go to state 12
    T_INTEIRO   shift, and go to state 13
    T_REGISTRO  shift, and go to state 14

    tipo              go to state 15
    definicao_campos  go to state 16


State 10

    3 programa: cabecalho definicoes variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $default  reduce using rule 1 ($@1)

    $@1  go to state 17


State 11

    8 definicoes: define definicoes •

    $default  reduce using rule 8 (definicoes)


State 12

    5 tipo: T_LOGICO •

    $default  reduce using rule 5 (tipo)


State 13

    6 tipo: T_INTEIRO •

    $default  reduce using rule 6 (tipo)


State 14

    7 tipo: T_REGISTRO • T_IDENTIF

    T_IDENTIF  shift, and go to state 18


State 15

   12 definicao_campos: tipo • lista_campos definicao_campos
   13                 | tipo • lista_campos

    T_IDENTIF  shift, and go to state 19

    lista_campos  go to state 20


State 16

   11 define: T_DEF $@3 definicao_campos • T_FIMDEF T_IDENTIF

    T_FIMDEF  shift, and go to state 21


State 17

    3 programa: cabecalho definicoes variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  shift, and go to state 22


State 18

    7 tipo: T_REGISTRO T_IDENTIF •

    $default  reduce using rule 7 (tipo)


State 19

   15 lista_campos: T_IDENTIF •

    $default  reduce using rule 15 (lista_campos)


State 20

   12 definicao_campos: tipo lista_campos • definicao_campos
   13                 | tipo lista_campos •
   14 lista_campos: lista_campos • T_IDENTIF

    T_IDENTIF   shift, and go to state 23
    T_LOGICO    shift, and go to state 12
    T_INTEIRO   shift, and go to state 13
    T_REGISTRO  shift, and go to state 14

    $default  reduce using rule 13 (definicao_campos)

    tipo              go to state 15
    definicao_campos  go to state 24


State 21

   11 define: T_DEF $@3 definicao_campos T_FIMDEF • T_IDENTIF

    T_IDENTIF  shift, and go to state 25


State 22

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDENTIF  shift, and go to state 26
    T_LEIA     shift, and go to state 27
    T_ESCREVA  shift, and go to state 28
    T_ENQTO    shift, and go to state 29
    T_SE       shift, and go to state 30

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 31
    comando         go to state 32
    entrada_saida   go to state 33
    entrada         go to state 34
    saida           go to state 35
    atribuicao      go to state 36
    selecao         go to state 37
    repeticao       go to state 38


State 23

   14 lista_campos: lista_campos T_IDENTIF •

    $default  reduce using rule 14 (lista_campos)


State 24

   12 definicao_campos: tipo lista_campos definicao_campos •

    $default  reduce using rule 12 (definicao_campos)


State 25

   11 define: T_DEF $@3 definicao_campos T_FIMDEF T_IDENTIF •

    $default  reduce using rule 11 (define)


State 26

   28 atribuicao: T_IDENTIF • $@5 T_ATRIB expressao

    $default  reduce using rule 27 ($@5)

    $@5  go to state 39


State 27

   25 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 40


State 28

   26 saida: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 48
    expressao_acesso  go to state 49
    termo             go to state 50


State 29

   34 repeticao: T_ENQTO • $@8 expressao T_FACA $@9 lista_comandos T_FIMENQTO

    $default  reduce using rule 32 ($@8)

    $@8  go to state 51


State 30

   31 selecao: T_SE • expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 52
    expressao_acesso  go to state 49
    termo             go to state 50


State 31

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  shift, and go to state 53


State 32

   18 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 26
    T_LEIA     shift, and go to state 27
    T_ESCREVA  shift, and go to state 28
    T_ENQTO    shift, and go to state 29
    T_SE       shift, and go to state 30

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 54
    comando         go to state 32
    entrada_saida   go to state 33
    entrada         go to state 34
    saida           go to state 35
    atribuicao      go to state 36
    selecao         go to state 37
    repeticao       go to state 38


State 33

   19 comando: entrada_saida •

    $default  reduce using rule 19 (comando)


State 34

   23 entrada_saida: entrada •

    $default  reduce using rule 23 (entrada_saida)


State 35

   24 entrada_saida: saida •

    $default  reduce using rule 24 (entrada_saida)


State 36

   20 comando: atribuicao •

    $default  reduce using rule 20 (comando)


State 37

   21 comando: selecao •

    $default  reduce using rule 21 (comando)


State 38

   22 comando: repeticao •

    $default  reduce using rule 22 (comando)


State 39

   28 atribuicao: T_IDENTIF $@5 • T_ATRIB expressao

    T_ATRIB  shift, and go to state 55


State 40

   25 entrada: T_LEIA T_IDENTIF •

    $default  reduce using rule 25 (entrada)


State 41

   47 expressao_acesso: T_IDENTIF •

    $default  reduce using rule 47 (expressao_acesso)


State 42

   50 termo: T_V •

    $default  reduce using rule 50 (termo)


State 43

   51 termo: T_F •

    $default  reduce using rule 51 (termo)


State 44

   49 termo: T_NUMERO •

    $default  reduce using rule 49 (termo)


State 45

   52 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao_acesso  go to state 49
    termo             go to state 56


State 46

   53 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 57
    expressao_acesso  go to state 49
    termo             go to state 50


State 47

   46 expressao_acesso: T_IDPONTO • $@10 expressao_acesso

    $default  reduce using rule 45 ($@10)

    $@10  go to state 58


State 48

   26 saida: T_ESCREVA expressao •
   35 expressao: expressao • T_VEZES expressao
   36          | expressao • T_DIV expressao
   37          | expressao • T_MAIS expressao
   38          | expressao • T_MENOS expressao
   39          | expressao • T_MAIOR expressao
   40          | expressao • T_MENOR expressao
   41          | expressao • T_IGUAL expressao
   42          | expressao • T_E expressao
   43          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 59
    T_DIV    shift, and go to state 60
    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67

    $default  reduce using rule 26 (saida)


State 49

   48 termo: expressao_acesso •

    $default  reduce using rule 48 (termo)


State 50

   44 expressao: termo •

    $default  reduce using rule 44 (expressao)


State 51

   34 repeticao: T_ENQTO $@8 • expressao T_FACA $@9 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 68
    expressao_acesso  go to state 49
    termo             go to state 50


State 52

   31 selecao: T_SE expressao • T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE
   35 expressao: expressao • T_VEZES expressao
   36          | expressao • T_DIV expressao
   37          | expressao • T_MAIS expressao
   38          | expressao • T_MENOS expressao
   39          | expressao • T_MAIOR expressao
   40          | expressao • T_MENOR expressao
   41          | expressao • T_IGUAL expressao
   42          | expressao • T_E expressao
   43          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 69
    T_VEZES  shift, and go to state 59
    T_DIV    shift, and go to state 60
    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67


State 53

    3 programa: cabecalho definicoes variaveis $@1 T_INICIO lista_comandos T_FIM • $@2

    $default  reduce using rule 2 ($@2)

    $@2  go to state 70


State 54

   18 lista_comandos: comando lista_comandos •

    $default  reduce using rule 18 (lista_comandos)


State 55

   28 atribuicao: T_IDENTIF $@5 T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 71
    expressao_acesso  go to state 49
    termo             go to state 50


State 56

   52 termo: T_NAO termo •

    $default  reduce using rule 52 (termo)


State 57

   35 expressao: expressao • T_VEZES expressao
   36          | expressao • T_DIV expressao
   37          | expressao • T_MAIS expressao
   38          | expressao • T_MENOS expressao
   39          | expressao • T_MAIOR expressao
   40          | expressao • T_MENOR expressao
   41          | expressao • T_IGUAL expressao
   42          | expressao • T_E expressao
   43          | expressao • T_OU expressao
   53 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 59
    T_DIV    shift, and go to state 60
    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_MAIOR  shift, and go to state 63
    T_MENOR  shift, and go to state 64
    T_IGUAL  shift, and go to state 65
    T_E      shift, and go to state 66
    T_OU     shift, and go to state 67
    T_FECHA  shift, and go to state 72


State 58

   46 expressao_acesso: T_IDPONTO $@10 • expressao_acesso

    T_IDENTIF  shift, and go to state 41
    T_IDPONTO  shift, and go to state 47

    expressao_acesso  go to state 73


State 59

   35 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 74
    expressao_acesso  go to state 49
    termo             go to state 50


State 60

   36 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 75
    expressao_acesso  go to state 49
    termo             go to state 50


State 61

   37 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 76
    expressao_acesso  go to state 49
    termo             go to state 50


State 62

   38 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 77
    expressao_acesso  go to state 49
    termo             go to state 50


State 63

   39 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 78
    expressao_acesso  go to state 49
    termo             go to state 50


State 64

   40 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 79
    expressao_acesso  go to state 49
    termo             go to state 50


State 65

   41 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 80
    expressao_acesso  go to state 49
    termo             go to state 50


State 66

   42 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 81
    expressao_acesso  go to state 49
    termo             go to state 50


State 67

   43 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 41
    T_V        shift, and go to state 42
    T_F        shift, and go to state 43
    T_NUMERO   shift, and go to state 44
    T_NAO      shift, and go to state 45
    T_ABRE     shift, and go to state 46
    T_IDPONTO  shift, and go to state 47

    expressao         go to state 82
    expressao_acesso  go to state 49
    termo             go to state 50


State 68
